[gd_scene load_steps=6 format=2]

[ext_resource path="res://icons/angulo-esquerdo.svg" type="Texture" id=1]
[ext_resource path="res://scripts/UI/OpenProject.gd" type="Script" id=2]
[ext_resource path="res://components/MiniButton.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.4, 0.294118, 0.545098, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 5
shadow_offset = Vector2( 5, 5 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.215686, 0.105882, 0.345098, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 5
shadow_offset = Vector2( 5, 5 )

[node name="OpenProject" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 500, 500 )
script = ExtResource( 2 )

[node name="FileDialog" type="Panel" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 500, 500 )
custom_styles/panel = SubResource( 1 )

[node name="OFLabel" type="Label" parent="FileDialog"]
margin_top = 15.0
margin_right = 500.0
margin_bottom = 29.0
text = "Open a Project"
align = 1
valign = 1

[node name="Top" type="HBoxContainer" parent="FileDialog"]
margin_left = 20.0
margin_top = 30.0
margin_right = 500.0
margin_bottom = 44.0

[node name="Back" type="ColorRect" parent="FileDialog/Top"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
color = Color( 1, 1, 1, 0 )

[node name="Icon" type="Sprite" parent="FileDialog/Top/Back"]
position = Vector2( 10, 10 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 1 )

[node name="PathLabel" type="Label" parent="FileDialog/Top"]
margin_left = 24.0
margin_top = 3.0
margin_right = 52.0
margin_bottom = 17.0
text = "Path"

[node name="CurrentPath" type="TextEdit" parent="FileDialog/Top"]
margin_left = 56.0
margin_right = 456.0
margin_bottom = 20.0
rect_min_size = Vector2( 400, 0 )
v_scroll_speed = 1.0

[node name="D&FLabel" type="Label" parent="FileDialog"]
margin_left = 20.0
margin_top = 55.0
margin_right = 143.0
margin_bottom = 69.0
text = "Directories & Files:"

[node name="FileTree" type="Tree" parent="FileDialog"]
margin_left = 20.0
margin_top = 70.0
margin_right = 480.0
margin_bottom = 440.0
rect_min_size = Vector2( 460, 370 )
custom_styles/bg = SubResource( 2 )

[node name="Down" type="HBoxContainer" parent="FileDialog"]
margin_left = 20.0
margin_top = 445.0
margin_right = 251.0
margin_bottom = 465.0
rect_min_size = Vector2( 0, 20 )

[node name="FileLabel" type="Label" parent="FileDialog/Down"]
margin_top = 3.0
margin_right = 27.0
margin_bottom = 17.0
text = "File:"

[node name="FileSelected" type="TextEdit" parent="FileDialog/Down"]
margin_left = 31.0
margin_right = 351.0
margin_bottom = 20.0
rect_min_size = Vector2( 320, 20 )

[node name="FileExt" type="OptionButton" parent="FileDialog/Down"]
margin_left = 355.0
margin_right = 462.0
margin_bottom = 20.0
text = "*kep (*.kep)"

[node name="Open" parent="FileDialog" instance=ExtResource( 3 )]
margin_left = 20.0
margin_top = 470.0
margin_right = 134.0
margin_bottom = 523.0
rect_scale = Vector2( 0.5, 0.5 )
label = "Open"

[node name="Cancel" parent="FileDialog" instance=ExtResource( 3 )]
margin_left = 100.0
margin_top = 470.0
margin_right = 214.0
margin_bottom = 523.0
rect_scale = Vector2( 0.5, 0.5 )
label = "Cancel"

[connection signal="gui_input" from="FileDialog" to="." method="_on_FileDialog_gui_input"]
[connection signal="gui_input" from="FileDialog/Top/Back" to="." method="_on_Back_gui_input"]
[connection signal="mouse_entered" from="FileDialog/Top/Back" to="." method="_on_Back_mouse_entered"]
[connection signal="mouse_exited" from="FileDialog/Top/Back" to="." method="_on_Back_mouse_exited"]
[connection signal="text_changed" from="FileDialog/Top/CurrentPath" to="." method="_on_CurrentPath_text_changed"]
[connection signal="item_activated" from="FileDialog/FileTree" to="." method="_on_FileTree_item_activated"]
[connection signal="item_selected" from="FileDialog/FileTree" to="." method="_on_FileTree_item_selected"]
[connection signal="gui_input" from="FileDialog/Open" to="." method="_on_Open_gui_input"]
[connection signal="gui_input" from="FileDialog/Cancel" to="." method="_on_Cancel_gui_input"]
